--- a/MyEssentialOilRemedies/Info.plist
+++ b/MyEssentialOilRemedies/Info.plist
@@ -81,6 +81,23 @@
 			<key>UTTypeIdentifier</key>
 			<string>net.burnsoft.MyEssentialOilRemedies.db</string>
 		</dict>
+		<dict>
+			<key>UTTypeDescription</key>
+			<string>My Essential Oils and Remedies Document</string>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.data</string>
+			</array>
+			<key>UTTypeIdentifier</key>
+			<string>net.burnsoft.MyEssentialOilRemedies.meo</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<string>meo</string>
+				<key>public.mime-type</key>
+				<string>application/MyEssentialOilRemedies</string>
+			</dict>
+		</dict>
 	</array>
 </dict>
 </plist>
