Create Lite version icon, also changed out the message box to a buy now or no thanks, if they click on the buy now, then it will direct them to the app store.

--- a/My Essential Oil Remedies Lite.plist
+++ b/My Essential Oil Remedies Lite.plist
@@ -5,11 +5,11 @@
 	<key>LITE_LIMIT</key>
 	<integer>15</integer>
 	<key>ISLITE</key>
-	<false/>
+	<true/>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>My Essential Oil Remedies</string>
+	<string>My Essential Oil Remedies LIte</string>
 	<key>CFBundleDocumentTypes</key>
 	<array>
 		<dict>
