--- a/My Essential Oil Remedies Lite.plist
+++ b/My Essential Oil Remedies Lite.plist
@@ -60,7 +60,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>$(CURRENT_PROJECT_VERSION)</string>
 	<key>ISLITE</key>
 	<true/>
 	<key>ITSAppUsesNonExemptEncryption</key>
