--- a/MyEssentialOilRemedies/My Essential Oil Remedies Lite.plist
+++ b/MyEssentialOilRemedies/My Essential Oil Remedies Lite.plist
@@ -69,6 +69,8 @@
 	<integer>15</integer>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
@@ -90,6 +92,8 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIUserInterfaceStyle</key>
+	<string>Lite</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
