--- a/MyEssentialOilRemedies/Info.plist
+++ b/MyEssentialOilRemedies/Info.plist
@@ -95,7 +95,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
-	<string>Lite</string>
+	<string>Light</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
