--- a/MyEssentialOilRemedies/My Essential Oil Remedies Lite.plist
+++ b/MyEssentialOilRemedies/My Essential Oil Remedies Lite.plist
@@ -93,7 +93,7 @@
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UIUserInterfaceStyle</key>
-	<string>Lite</string>
+	<string>Light</string>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
