--- a/MyEssentialOilRemedies/My Essential Oil Remedies Lite.plist
+++ b/MyEssentialOilRemedies/My Essential Oil Remedies Lite.plist
@@ -15,6 +15,8 @@
 			</array>
 			<key>CFBundleTypeName</key>
 			<string>MEO Database</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>net.burnsoft.MyEssentialOilRemedies.db</string>
@@ -27,6 +29,8 @@
 			</array>
 			<key>CFBundleTypeName</key>
 			<string>MEO Oil Data Transfer</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>net.burnsoft.MyEssentialOilRemedies.meo</string>
@@ -39,6 +43,8 @@
 			</array>
 			<key>CFBundleTypeName</key>
 			<string>MEO Remedy Data Transfer</string>
+			<key>LSHandlerRank</key>
+			<string>Default</string>
 			<key>LSItemContentTypes</key>
 			<array>
 				<string>net.burnsoft.MyEssentialOilRemedies.meor</string>
@@ -67,6 +73,8 @@
 	<false/>
 	<key>LITE_LIMIT</key>
 	<integer>15</integer>
+	<key>LSHandlerRank</key>
+	<string>Default</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>LSSupportsOpeningDocumentsInPlace</key>
